# TODO

./: .env.example  .gitignore  README.md  impcmmd.py  main.py  pyproject.toml
app/api/: __init__.py  todo.py  user.py
app/config/: database.py  settings.py
app/constants/: message.py
app/dependencies/: user_and_db.py
app/models/: __init__.py  todo.py  user.py
app/schemas/: todo.py  user.py
app/services/: todo_service.py  user_service.py
app/utils/: auth.py  helper.py
migrations/: env.py
migrations/versions/: 136d8b4764d7_create_users_and_todos_tables.py
